@@ -291,7 +291,8 @@ TODO for 0.3.16
     + fix silver solder recipe results in normal solder
   - Fix casting icons
   - Reorder icons
-  - Adjust order of science pack icons in lab
+  + Adjust order of science pack icons in lab
+    - biusart lab contains names of different players when building
   - clean up code for buildings
   - Add filter to many recipes
   - Fix iodine brine spawning on start location (seed: 2806285432)
